[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Interface/GameInterface/GameInterface.gd" type="Script" id=1]
[ext_resource path="res://src/Interface/GameInterface/heart.tres" type="Texture" id=2]
[ext_resource path="res://src/Interface/GameInterface/cumstack.tres" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/montreal/Montreal48Bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Nodes/Coin/coin.png" type="Texture" id=5]

[node name="GameInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 176.0
margin_bottom = 175.0
custom_constants/margin_top = 32
custom_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 492.0
margin_bottom = 211.0

[node name="HeartBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 111.0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HeartBar"]
margin_right = 112.0
margin_bottom = 111.0
texture = ExtResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/HeartBar"]
margin_left = 116.0
margin_right = 228.0
margin_bottom = 111.0
texture = ExtResource( 2 )

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/HeartBar"]
margin_left = 232.0
margin_right = 344.0
margin_bottom = 111.0
texture = ExtResource( 2 )

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/HeartBar"]
margin_left = 348.0
margin_right = 460.0
margin_bottom = 111.0
texture = ExtResource( 2 )

[node name="CumStacksBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 460.0
margin_bottom = 179.0
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/CumStacksBar"]
margin_left = 62.0
margin_right = 126.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/CumStacksBar"]
margin_left = 130.0
margin_right = 194.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/CumStacksBar"]
margin_left = 198.0
margin_right = 262.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/CumStacksBar"]
margin_left = 266.0
margin_right = 330.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/VBoxContainer/CumStacksBar"]
margin_left = 334.0
margin_right = 398.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true

[node name="CoinContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -240.0
margin_bottom = 143.0
grow_horizontal = 0
custom_constants/margin_right = 32
custom_constants/margin_top = 32

[node name="HBoxContainer" type="HBoxContainer" parent="CoinContainer"]
margin_left = 61.0
margin_top = 32.0
margin_right = 208.0
margin_bottom = 96.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
custom_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="CoinContainer/HBoxContainer"]
margin_right = 51.0
margin_bottom = 64.0
grow_horizontal = 0

[node name="CoinAmount" type="Label" parent="CoinContainer/HBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 19.0
margin_bottom = 62.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 4 )
text = "1"

[node name="Label2" type="Label" parent="CoinContainer/HBoxContainer/HBoxContainer"]
margin_left = 23.0
margin_top = 2.0
margin_right = 51.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 4 )
text = "x"

[node name="CoinTextureRect" type="TextureRect" parent="CoinContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 147.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
